<resources>
    <string name="app_name">App Toan Cau KPT</string>
    <string name="text_TieuDe">Phiếu thông tin</string>
    <string name="hint_HoTen">Nhập họ tên</string>
    <string name="hint_Email">Nhập Email</string>
    <string name="hint_Sodienthoai">Nhập số điện thoại</string>
    <string name="text_XacNhan">Xác nhận</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>