<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppToanCau">

    <TextView
        android:id="@+id/textPhieuTT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/text_TieuDe"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editHoTen"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPhieuTT"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_HoTen"

        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editHoTen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_Email"

        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editNhapsodienthoai"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_Sodienthoai"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnXacNhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNhapsodienthoai"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="147dp"
        android:text="@string/text_XacNhan" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/red"
        android:textSize="17dp"
        android:layout_below="@id/btnXacNhan"
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>